<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/popFeedbackDefaultPopupBackgroundView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        app:cardElevation="0dp"
        app:cardCornerRadius="@dimen/pop_feedback_default_card_corner_radius"
        app:cardBackgroundColor="@color/popup_default_background_color"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/popFeedbackDefaultPopupTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/inter_medium"
                android:text="@string/pop_feedback_default_title_text"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/popFeedbackDefaultPopupTitleText">

                <Button
                    android:id="@+id/bugReportButton"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="16dp"
                    android:drawableTop="@drawable/ic_popfeedback_default_bug_report_icon"
                    android:text="@string/bug_report_text"
                    android:fontFamily="@font/inter_regular"
                    android:textSize="13sp"
                    android:textColor="@color/black"
                    android:background="?android:attr/selectableItemBackground"
                    android:textAllCaps="false"
                    android:letterSpacing="0"
                    android:drawablePadding="8dp">
                </Button>

                <Button
                    android:id="@+id/feedbackButton"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="16dp"
                    android:drawableTop="@drawable/ic_popfeedback_default_feedback_icon"
                    android:text="@string/feedback_text"
                    android:fontFamily="@font/inter_regular"
                    android:textSize="13sp"
                    android:textColor="@color/black"
                    android:background="?android:attr/selectableItemBackground"
                    android:textAllCaps="false"
                    android:letterSpacing="0"
                    android:drawablePadding="8dp">
                </Button>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>