<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="0dp"
        app:cardBackgroundColor="@color/popup_default_background_color"
        app:cardCornerRadius="@dimen/pop_feedback_default_card_corner_radius"
        app:cardElevation="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="24dp">

            <TextView
                android:id="@+id/ratingTitleText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/inter_medium"
                android:gravity="center"
                android:text="@string/how_do_you_like_app"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/ratingText"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/edit_text_background"
                android:ems="10"
                android:gravity="start"
                android:hint="@string/feedback_text"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:textColor="@color/black"
                android:textColorHint="@color/hint_color"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingLinearLayout"
                tools:ignore="TextContrastCheck" />

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:backgroundTint="@color/popup_default_button_color"
                android:enabled="true"
                android:fontFamily="@font/inter_medium"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:stateListAnimator="@null"
                android:text="@string/submit_text"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:cornerRadius="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingText" />

            <LinearLayout
                android:id="@+id/ratingLinearLayout"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="24dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ratingTitleText">


                <androidx.cardview.widget.CardView
                    android:id="@+id/pfOneStar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="8dp"
                    android:layout_weight="1"
                    android:elevation="0dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="0dp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/pfTwoStar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="8dp"
                    android:layout_weight="1"
                    android:elevation="0dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="0dp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/pfThreeStar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="8dp"
                    android:layout_weight="1"
                    android:elevation="0dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="0dp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/pfFourStar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="8dp"
                    android:layout_weight="1"
                    android:elevation="0dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="0dp" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/pfFiveStar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="8dp"
                    android:layout_weight="1"
                    android:elevation="0dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="0dp" />
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>